# ltc_code

./: .gitignore  .gitmodules  CMakeLists.txt
fit/: brdf_myggx.h  export.h  fitLTC.cpp
results/: ltc.js  ltc_1.exr  ltc_2.exr  ltc_tr_1.exr  ltc_tr_2.exr
